--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "random-keyboard-parts.pretty"]
 	path = random-keyboard-parts.pretty
 	url = https://github.com/ai03-2725/random-keyboard-parts.pretty
+[submodule "nice-nano-kicad"]
+	path = nice-nano-kicad
+	url = git@github.com:bstiq/nice-nano-kicad.git
